--- a/app/templates/smashbros/character.html
+++ b/app/templates/smashbros/character.html
@@ -1,1 +1,8 @@
 {% extends 'layout.html' %}
+
+{% block body %}
+  <h1>{{character.name}}</h1> <br>
+  <h4>Weight:</h4><span class="badge badge-primary">{{character.weight}}</span> <br>
+  <h4>Speed</h4><span class="badge">{{character.speed}}</span> <br>
+  <h4>Powers</h4><span class="badge">{{character.powers}}</span> <br>
+{% endblock %}
