--- a/app/templates/smashbros/index.html
+++ b/app/templates/smashbros/index.html
@@ -12,14 +12,23 @@
         <th>Powers</th>
         <th>Speed</th>
         <th></th>
+        <th></th>
       </tr>
       {% for character in characters %}
       <tr>
-        <td><a href="character/{{character.id}}">{{character.name}}</a></td>
+        <td><a href="./character/{{character.id}}">{{character.name}}</a></td>
         <td>{{character.weight}}</td>
         <td>{{character.powers}}</td>
         <td>{{character.speed}}</td>
-        <td>delete?</td>
+        <td>
+          <a href="./update_character/{{character.id}}" class="btn btn-default">Update</a>
+        </td>
+        <td>
+          <form action="{{url_for('smashbros.delete_character', id=character.id)}}" method="POST">
+            <input type="hidden" name="_method" value="DELETE">
+            <input type="submit" value="Delete" class="btn btn-danger">
+          </form>
+        </td>
       </tr>
       {% endfor %}
     </table>
