--- a/app/templates/smashbros/udpate_character.html
+++ b/app/templates/smashbros/udpate_character.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-  <h1>Add SmashBro Character</h1>
+  <h1>Edit SmashBro Character</h1>
   {% from 'includes/_formhelpers.html' import render_field %}
   <form action="" method="post">
     <div class="form-group">
@@ -17,7 +17,7 @@
       {{render_field(form.speed, class_="form-control")}}
     </div>
     <p>
-      <input type="submit" class="btn btn-primary" value="Update">
+      <input type="submit" class="btn btn-primary" value="Submit">
     </p>
   </form>
 {% endblock %}
