--- a/app/templates/smashbros/add_character.html
+++ b/app/templates/smashbros/add_character.html
@@ -17,7 +17,7 @@
       {{render_field(form.speed, class_="form-control")}}
     </div>
     <p>
-      <input type="submit" class="btn btn-primary" value="Update">
+      <input type="submit" class="btn btn-primary" value="Add">
     </p>
   </form>
 {% endblock %}
